--- a/app/views/cosmetics-submit-search/left-nav-cosmetic-products-extended.html
+++ b/app/views/cosmetics-submit-search/left-nav-cosmetic-products-extended.html
@@ -41,12 +41,12 @@
       <li class="opss-left-nav__active">
           <a href="left-nav-cosmetic-products.html" class="govuk-link govuk-link--no-visited-state" aria-current="page">Product notifications</a>
       </li>
-      <li class="govuk-!-margin-bottom-6">
+      <li>
           <a href="left-nav-cosmetic-products-drafts.html" class="govuk-link govuk-link--no-visited-state">Draft notifications</a>
       </li>
-      <!--li class="govuk-!-margin-bottom-6">
-          <a href="left-nav-cosmetic-products-archived.html" class="govuk-link govuk-link--no-visited-state">Archived notifications</a>
-      </li--> 
+      <li class="govuk-!-margin-bottom-6">
+          <a href="#" class="govuk-link govuk-link--no-visited-state">Archived notifications</a>
+      </li> 
       <li>
         <a href="left-nav-cosmetic-products-search.html" class="govuk-link govuk-link--no-visited-state">Product - search</a>
       </li> 
