--- a/app/views/cosmetics-submit-search/left-nav-cosmetic-products-search-results.html
+++ b/app/views/cosmetics-submit-search/left-nav-cosmetic-products-search-results.html
@@ -1,7 +1,7 @@
 {% extends "layout-02-noacc.html" %}
 
 {% block pageTitle %}
-    Product search
+    Product search results
 {% endblock %}
 
 
@@ -21,7 +21,15 @@
           </p>
         </div>
 
+        <div class="govuk-grid-column-one-third govuk-!-margin-bottom-2">
 
+          <div class="opss-text-align-right">
+            <a href="left-nav-cosmetic-products-search.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-underline-offset">
+              Search again
+            </a>
+          </div>
+
+        </div>
       </div>
   </div>
 </div>
@@ -67,11 +75,13 @@
         </p>
       </div>
 
-      <!--div class="govuk-grid-column-one-third govuk-!-margin-bottom-2">   
-        <a href="#" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-14 opss-text-align-right" download="">
-          <span class="opss-download-link-sm"></span>Download a <abbr title="Comma-Separated Values">CSV</abbr> file of your notified products
-        </a>
-      </div-->
+      <div class="govuk-grid-column-one-third govuk-!-margin-bottom-2">   
+        <div class="opss-text-align-right">
+          <a href="left-nav-cosmetic-products-search-edit.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-14 opss-text-underline-offset">
+            Edit your search
+          </a>
+        </div>
+      </div>
     </div>    
 
     <table class="govuk-table govuk-!-margin-top-6 govuk-!-margin-bottom-0 opss-table opss-table--last-col-right opss-table--first-col-normal">
