--- a/app/views/cosmetics-submit-search/new-nav-example.html
+++ b/app/views/cosmetics-submit-search/new-nav-example.html
@@ -1,4 +1,4 @@
-{% extends "layout-02-noacc.html" %}
+{% extends "layout-02-noacc2.html" %}
 
 {% block pageTitle %}
     Cosmetic products
@@ -39,19 +39,22 @@
 
     <ul class="govuk-list opss-left-nav">
       <li class="opss-left-nav__active">
-          <a href="left-nav-cosmetic-products.html" class="govuk-link govuk-link--no-visited-state" aria-current="page">Product notifications</a>
+          <a href="#" class="govuk-link govuk-link--no-visited-state" aria-current="page">Product notifications</a>
+      </li>
+      <li>
+          <a href="#" class="govuk-link govuk-link--no-visited-state">Draft notifications</a>
+      </li>
+      <li>
+          <a href="#" class="govuk-link govuk-link--no-visited-state">Archived notifications</a>
       </li>
       <li class="govuk-!-margin-bottom-6">
-          <a href="left-nav-cosmetic-products-drafts.html" class="govuk-link govuk-link--no-visited-state">Draft notifications</a>
-      </li>
-      <!--li class="govuk-!-margin-bottom-6">
-          <a href="left-nav-cosmetic-products-archived.html" class="govuk-link govuk-link--no-visited-state">Archived notifications</a>
-      </li--> 
+        <a href="#" class="govuk-link govuk-link--no-visited-state">Nanomaterials</a>
+      </li>       
       <li>
-        <a href="left-nav-cosmetic-products-search.html" class="govuk-link govuk-link--no-visited-state">Product - search</a>
+        <a href="#" class="govuk-link govuk-link--no-visited-state">Product - search</a>
       </li> 
       <li>
-        <a href="left-nav-cosmetic-ingredients-search.html" class="govuk-link govuk-link--no-visited-state">Ingredient - search</a>
+        <a href="#" class="govuk-link govuk-link--no-visited-state">Ingredient - search</a>
       </li>                
     </ul>
 
