--- a/app/views/opss-nav2.html
+++ b/app/views/opss-nav2.html
@@ -6,11 +6,11 @@
 
   <nav class="govuk-width-container" aria-label="Main">
     <ul class="opss-top-nav">
+      <li>
+        <a class="govuk-link govuk-link--no-visited-state" href="#">Home</a>
+      </li>      
       <li class="opss-top-nav__item--active">
         <a class="govuk-link govuk-link--no-visited-state" href="left-nav-cosmetic-products" aria-current="page">Cosmetic products</a>
-      </li>
-      <li>
-        <a class="govuk-link govuk-link--no-visited-state" href="#">Nanomaterials</a>
       </li>
       <li>
         <a class="govuk-link govuk-link--no-visited-state" href="#">Responsible person</a>
